--- a/httpd/data/index.html
+++ b/httpd/data/index.html
@@ -95,6 +95,12 @@
                 <li>
                   <a href="jenkinssettings.html"><i class="fa fa-circle-o"></i>Jenkins</a>
                 </li>
+                <li>
+                  <a href="puppetsettings.html"><i class="fa fa-circle-o"></i>Puppet</a>
+                </li>
+                <li>
+                  <a href="chefsettings.html"><i class="fa fa-circle-o"></i>Chef</a>
+                </li>
               </ul>
             </li>
           </ul>
