--- a/sinatra/data/public/jenkinssettings.html
+++ b/sinatra/data/public/jenkinssettings.html
@@ -141,15 +141,15 @@
                       <fieldset id="externaljenkins">
                         <div class="form-group">
                           <label for="usr">Jenkins URL</label>
-                          <input type="text" id="usr" class="form-control input-lg" name="jenkins_url" placeholder="Example: http://jenkins.grt.local:8080">
+                          <input type="text" id="usr" class="form-control input-lg" name="jenkins_url" value="http://jenkins:8080">
                         </div>
                         <div class="form-group">
                           <label for="usr">Jenkins Username</label>
-                          <input type="text" class="form-control input-lg" id="usr" name="jenkins_username">
+                          <input type="text" class="form-control input-lg" id="usr" name="jenkins_username" value="jenkins">
                         </div>
                         <div class="form-group">
                           <label for="usr">Jenkins Password</label>
-                          <input type="text" class="form-control input-lg" id="usr" name="jenkins_password">
+                          <input type="text" class="form-control input-lg" id="usr" name="jenkins_password" value="jenkins">
                         </div>
                       </fieldset>
                       <div class="form-group">
