Fix puppet control repo functionality

--- a/sinatra/data/public/puppetsettings.html
+++ b/sinatra/data/public/puppetsettings.html
@@ -359,7 +359,7 @@
       (function($){
                   function processForm( e ){
                       $.ajax({
-                          url: '/puppetcontrolrepo',
+                          url: '/puppetsettings',
                           dataType: 'text',
                           type: 'post',
                           contentType: 'application/x-www-form-urlencoded',
