--- a/sinatra/data/public/puppetsettings.html
+++ b/sinatra/data/public/puppetsettings.html
@@ -1,12 +1,16 @@
-<html><head>
+<html>
+  
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PuppetCI</title>
     <!-- Tell the browser to be responsive to screen width
     -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    name="viewport">
     <!-- Bootstrap 3.3.6 -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Ionicons -->
@@ -25,7 +29,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head><body class="hold-transition skin-blue sidebar-mini">
+  </head>
+  
+  <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
       <!-- Main Header -->
       <header class="main-header">
@@ -132,7 +138,8 @@
                     <div class="form-group">
                       <div class="form-group">
                         <label for="usr">Puppet Control Repository URL</label>
-                        <input type="text" id="usr" class="form-control input-lg" name="puppetcontrolrepourl" placeholder="e.g. https://github.com/puppetinabox/controlrepo.git">
+                        <input type="text" id="usr" class="form-control input-lg"
+                        name="puppetcontrolrepourl" placeholder="e.g. https://github.com/puppetinabox/controlrepo.git">
                       </div>
                       <div class="form-group">
                         <label>SSH Credentials</label>
@@ -172,19 +179,22 @@
                       <div class="col-md-6">
                         <div class="form-group">
                           <label for="usr">Module Name</label>
-                          <input type="text" id="puppet_module_name" class="form-control input-lg" name="puppet_module_name" placeholder="e.g. windows_disable_ipv6">
+                          <input type="text" id="puppet_module_name" class="form-control input-lg"
+                          name="puppet_module_name" placeholder="e.g. windows_disable_ipv6">
                         </div>
                       </div>
                       <div class="col-md-6">
                         <div class="form-group">
                           <label for="usr">Module Branch</label>
-                          <input type="text" id="puppet_module_branch" class="form-control input-lg" name="puppet_module_branch" placeholder="e.g. master">
+                          <input type="text" id="puppet_module_branch" class="form-control input-lg"
+                          name="puppet_module_branch" placeholder="e.g. master">
                         </div>
                       </div>
                       <div class="col-md-12">
                         <div class="form-group">
                           <label for="usr">Module URL</label>
-                          <input type="text" id="puppet_module_url" class="form-control input-lg" name="puppet_module_url" placeholder="e.g. https://github.com/martezr/puppet-windows_disable_ipv6.git">
+                          <input type="text" id="puppet_module_url" class="form-control input-lg"
+                          name="puppet_module_url" placeholder="e.g. https://github.com/martezr/puppet-windows_disable_ipv6.git">
                         </div>
                       </div>
                     </div>
@@ -211,7 +221,8 @@
                   <h3 class="box-title">Puppet Modules</h3>
                   <div class="box-tools">
                     <div class="input-group input-group-sm" style="width: 150px;">
-                      <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+                      <input type="text" name="table_search" class="form-control pull-right"
+                      placeholder="Search">
                       <div class="input-group-btn">
                         <button type="submit" class="btn btn-default">
                           <i class="fa fa-search"></i>
@@ -222,35 +233,16 @@
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body table-responsive no-padding">
-                  <table class="table table-hover">
-                    <tbody>
-                      <tr>
-                        <th>Name</th>
-                        <th>Branch</th>
-                        <th>URL</th>
-                      </tr>
-                      <tr>
-                        <td>azure</td>
-                        <td>master</td>
-                        <td>https://github.com/puppetlabs/puppetlabs-azure.git</td>
-                      </tr>
-                      <tr>
-                        <td>iis</td>
-                        <td>master</td>
-                        <td>https://github.com/puppetlabs/puppetlabs-iis.git</td>
-                      </tr>
-                      <tr>
-                        <td>dsc</td>
-                        <td>master</td>
-                        <td>https://github.com/puppetlabs/puppetlabs-dsc.git</td>
-                      </tr>
-                      <tr>
-                        <td>registry</td>
-                        <td>master</td>
-                        <td>https://github.com/puppetlabs/puppetlabs-registry.git</td>
-                      </tr>
-                    </tbody>
-                  </table>
+<table data-toggle="table" data-height="400"
+       data-url="/puppetmodules">
+    <thead>
+    <tr>
+        <th data-field="name">Name</th>
+        <th data-field="branch">Branch</th>
+        <th data-field="url">URL</th>
+    </tr>
+    </thead>
+</table>
                 </div>
                 <!-- /.box-body -->
               </div>
@@ -405,6 +397,12 @@
     <!-- Optionally, you can add Slimscroll and FastClick plugins.
     Both of these plugins are recommended to enhance the user experience. Slimscroll
     is required when using the fixed layout. -->
-  
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
+    <!-- Latest compiled and minified Locales -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/locale/bootstrap-table-en-US.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
+  </body>
 
-</body></html>
+</html>
