--- a/sinatra/data/public/index.html
+++ b/sinatra/data/public/index.html
@@ -116,20 +116,71 @@
         </section>
         <!-- Main content -->
         <section class="content">
+          <div class="col-md-4">
+            <!-- general form elements -->
+            <div class="box">
+              <div class="box-header with-border">
+                <h3 class="box-title">Appliance Summary</h3>
+              </div>
+              <!-- /.box-header -->
+              <!-- form start -->
+              <form role="form">
+                <div class="box-body">
+                  <h1 class="text-center">
+                    <b>PuppetCI 0.0.1</b>
+                    <br>version</h1>
+                </div>
+                <!-- /.box-body -->
+              </form>
+            </div>
+            <!-- /.box -->
+            <!-- Form Element sizes -->
+            <!-- /.box -->
+            <!-- /.box -->
+            <!-- Input addon -->
+            <!-- /.box -->
+          </div>
+          <div class="col-md-4">
+            <!-- general form elements -->
+            <div class="box">
+              <div class="box-header with-border">
+                <h3 class="box-title">CPU Usage</h3>
+              </div>
+              <!-- /.box-header -->
+              <!-- form start -->
+              <form role="form">
+                <div class="box-body">
+                  <h1 class="text-center">
+                    <b>15</b>
+                    <br>modules</h1>
+                </div>
+                <!-- /.box-body -->
+              </form>
+            </div>
+            <!-- /.box -->
+            <!-- Form Element sizes -->
+            <!-- /.box -->
+            <!-- /.box -->
+            <!-- Input addon -->
+            <!-- /.box -->
+          </div>
           <div class="row">
             <!-- left column -->
-            <div class="col-md-11">
+            <div class="col-md-4">
               <!-- general form elements -->
-              <div class="box box-primary">
+              <div class="box">
                 <div class="box-header with-border">
-                  <h3 class="box-title">Dashboard coming soon....</h3>
+                  <h3 class="box-title">Memory Usage</h3>
                 </div>
                 <!-- /.box-header -->
                 <!-- form start -->
                 <form role="form">
-                  <div class="box-body"></div>
+                  <div class="box-body">
+                    <h1 class="text-center">
+                      <b>28%</b>&nbsp;
+                      <br>Utilization</h1>
+                  </div>
                   <!-- /.box-body -->
-                  <div class="box-footer"></div>
                 </form>
               </div>
               <!-- /.box -->
@@ -143,7 +194,78 @@
             <!-- right column -->
             <!--/.col (right) -->
           </div>
-          <!-- /.row -->
+          <div class="row">
+            <div class="col-md-11">
+              <div class="box">
+                <div class="box-header">
+                  <h3 class="box-title">Condensed Full Width Table</h3>
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body no-padding">
+                  <table class="table table-condensed">
+                    <tbody>
+                      <tr>
+                        <th style="width: 10px">#</th>
+                        <th>Task</th>
+                        <th>Progress</th>
+                        <th style="width: 40px">Label</th>
+                      </tr>
+                      <tr>
+                        <td>1.</td>
+                        <td>Update software</td>
+                        <td>
+                          <div class="progress progress-xs">
+                            <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
+                          </div>
+                        </td>
+                        <td>
+                          <span class="badge bg-red">55%</span>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>2.</td>
+                        <td>Clean database</td>
+                        <td>
+                          <div class="progress progress-xs">
+                            <div class="progress-bar progress-bar-yellow" style="width: 70%"></div>
+                          </div>
+                        </td>
+                        <td>
+                          <span class="badge bg-yellow">70%</span>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>3.</td>
+                        <td>Cron job running</td>
+                        <td>
+                          <div class="progress progress-xs progress-striped active">
+                            <div class="progress-bar progress-bar-primary" style="width: 30%"></div>
+                          </div>
+                        </td>
+                        <td>
+                          <span class="badge bg-light-blue">30%</span>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>4.</td>
+                        <td>Fix and squish bugs</td>
+                        <td>
+                          <div class="progress progress-xs progress-striped active">
+                            <div class="progress-bar progress-bar-success" style="width: 90%"></div>
+                          </div>
+                        </td>
+                        <td>
+                          <span class="badge bg-green">90%</span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!-- /.box-body -->
+              </div>
+            </div>
+            <!-- /.row -->
+          </div>
         </section>
         <!-- /.content -->
       </div>
