--- a/sinatra/data/public/puppetsettings.html
+++ b/sinatra/data/public/puppetsettings.html
@@ -1,16 +1,12 @@
-<html>
-  
-  <head>
+<html><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PuppetCI</title>
     <!-- Tell the browser to be responsive to screen width
     -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-    name="viewport">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Ionicons -->
@@ -29,9 +25,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  
-  <body class="hold-transition skin-blue sidebar-mini">
+  </head><body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
       <!-- Main Header -->
       <header class="main-header">
@@ -138,8 +132,7 @@
                     <div class="form-group">
                       <div class="form-group">
                         <label for="usr">Puppet Control Repository URL</label>
-                        <input type="text" id="usr" class="form-control input-lg"
-                        name="puppetcontrolrepourl" placeholder="e.g. https://github.com/puppetinabox/controlrepo.git">
+                        <input type="text" id="usr" class="form-control input-lg" name="puppetcontrolrepourl" placeholder="e.g. https://github.com/puppetinabox/controlrepo.git">
                       </div>
                       <div class="form-group">
                         <label>SSH Credentials</label>
@@ -179,22 +172,19 @@
                       <div class="col-md-6">
                         <div class="form-group">
                           <label for="usr">Module Name</label>
-                          <input type="text" id="puppet_module_name" class="form-control input-lg"
-                          name="puppet_module_name" placeholder="e.g. windows_disable_ipv6">
+                          <input type="text" id="puppet_module_name" class="form-control input-lg" name="puppet_module_name" placeholder="e.g. windows_disable_ipv6">
                         </div>
                       </div>
                       <div class="col-md-6">
                         <div class="form-group">
                           <label for="usr">Module Branch</label>
-                          <input type="text" id="puppet_module_branch" class="form-control input-lg"
-                          name="puppet_module_branch" placeholder="e.g. master">
+                          <input type="text" id="puppet_module_branch" class="form-control input-lg" name="puppet_module_branch" placeholder="e.g. master">
                         </div>
                       </div>
                       <div class="col-md-12">
                         <div class="form-group">
                           <label for="usr">Module URL</label>
-                          <input type="text" id="puppet_module_url" class="form-control input-lg"
-                          name="puppet_module_url" placeholder="e.g. https://github.com/martezr/puppet-windows_disable_ipv6.git">
+                          <input type="text" id="puppet_module_url" class="form-control input-lg" name="puppet_module_url" placeholder="e.g. https://github.com/martezr/puppet-windows_disable_ipv6.git">
                         </div>
                       </div>
                     </div>
@@ -215,14 +205,138 @@
             <!-- /.row -->
           </div>
           <div class="row">
+            <div class="col-xs-4">
+              <div class="box box-primary">
+                <div class="box-header with-border">
+                  <h2 class="box-title">Development Puppet Master</h2>
+                </div>
+                <!-- /.box-header -->
+                <!-- form start -->
+                <form role="form" name="addpuppetmodule" id="addpuppetmodule">
+                  <div class="box-body">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">IP/Hostname</label>
+                        <input type="text" id="puppet_module_name" class="form-control input-lg" name="puppet_module_name">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">Username</label>
+                        <input type="text" id="puppet_module_branch" class="form-control input-lg" name="puppet_module_branch">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">Password</label>
+                        <input type="text" id="puppet_module_url" class="form-control input-lg" name="puppet_module_url">
+                      </div>
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                      <button type="submit" class="btn btn-lg btn-primary col-xs-12">Add Puppet Master</button>
+                    </div>
+                  </div>
+                </form>
+                <!-- /.box -->
+                <!-- Form Element sizes -->
+                <!-- /.box -->
+                <!-- /.box -->
+                <!-- Input addon -->
+                <!-- /.box -->
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="box box-primary">
+                <div class="box-header with-border">
+                  <h2 class="box-title">Staging Puppet Master</h2>
+                </div>
+                <form role="form" name="addpuppetmodule" id="addpuppetmodule">
+                  <div class="box-body">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">IP/Hostname</label>
+                        <input type="text" id="puppet_module_name" class="form-control input-lg" name="puppet_module_name">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">Username</label>
+                        <input type="text" id="puppet_module_branch" class="form-control input-lg" name="puppet_module_branch">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">Password</label>
+                        <input type="text" id="puppet_module_url" class="form-control input-lg" name="puppet_module_url">
+                      </div>
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                      <button type="submit" class="btn btn-lg btn-primary col-xs-12">Add Puppet Master</button>
+                    </div>
+                  </div>
+                </form>
+                <!-- /.box-header -->
+                <!-- form start -->
+                <!-- /.box -->
+                <!-- Form Element sizes -->
+                <!-- /.box -->
+                <!-- /.box -->
+                <!-- Input addon -->
+                <!-- /.box -->
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="box box-primary">
+                <div class="box-header with-border">
+                  <h2 class="box-title">Production Puppet Master</h2>
+                </div>
+                <form role="form" name="addpuppetmodule" id="addpuppetmodule">
+                  <div class="box-body">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">IP/Hostname</label>
+                        <input type="text" id="puppet_module_name" class="form-control input-lg" name="puppet_module_name">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">Username</label>
+                        <input type="text" id="puppet_module_branch" class="form-control input-lg" name="puppet_module_branch">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="usr">Password</label>
+                        <input type="text" id="puppet_module_url" class="form-control input-lg" name="puppet_module_url">
+                      </div>
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                      <button type="submit" class="btn btn-lg btn-primary col-xs-12">Add Puppet Master</button>
+                    </div>
+                  </div>
+                </form>
+                <!-- /.box-header -->
+                <!-- form start -->
+                <!-- /.box -->
+                <!-- Form Element sizes -->
+                <!-- /.box -->
+                <!-- /.box -->
+                <!-- Input addon -->
+                <!-- /.box -->
+              </div>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-xs-12">
               <div class="box">
                 <div class="box-header">
                   <h3 class="box-title">Puppet Modules</h3>
                   <div class="box-tools">
                     <div class="input-group input-group-sm" style="width: 150px;">
-                      <input type="text" name="table_search" class="form-control pull-right"
-                      placeholder="Search">
+                      <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
                       <div class="input-group-btn">
                         <button type="submit" class="btn btn-default">
                           <i class="fa fa-search"></i>
@@ -233,16 +347,15 @@
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body table-responsive no-padding">
-<table data-toggle="table" data-height="400"
-       data-url="/puppetmodules">
-    <thead>
-    <tr>
-        <th data-field="name">Name</th>
-        <th data-field="branch">Branch</th>
-        <th data-field="url">URL</th>
-    </tr>
-    </thead>
-</table>
+                  <table data-toggle="table" data-height="400" data-url="/puppetmodules">
+                    <thead>
+                      <tr>
+                        <th data-field="name">Name</th>
+                        <th data-field="branch">Branch</th>
+                        <th data-field="url">URL</th>
+                      </tr>
+                    </thead>
+                  </table>
                 </div>
                 <!-- /.box-body -->
               </div>
@@ -344,55 +457,55 @@
     <script src="dist/js/app.min.js"></script>
     <script>
       (function($){
-                          function processForm( e ){
-                              $.ajax({
-                                  url: '/puppetsettings',
-                                  dataType: 'text',
-                                  type: 'post',
-                                  contentType: 'application/x-www-form-urlencoded',
-                                  data: $(this).serialize(),
-                                  success: function( data, textStatus, jQxhr ){
-                                      $('#response pre').html( data );
-                                  },
-                                  error: function( jqXhr, textStatus, errorThrown ){
-                                      console.log( errorThrown );
+                                  function processForm( e ){
+                                      $.ajax({
+                                          url: '/puppetsettings',
+                                          dataType: 'text',
+                                          type: 'post',
+                                          contentType: 'application/x-www-form-urlencoded',
+                                          data: $(this).serialize(),
+                                          success: function( data, textStatus, jQxhr ){
+                                              $('#response pre').html( data );
+                                          },
+                                          error: function( jqXhr, textStatus, errorThrown ){
+                                              console.log( errorThrown );
+                                          }
+                                      });
+                                      e.preventDefault();
+                                      bootstrap_alert = function() {}
+                                      bootstrap_alert.warning = function(message) {
+                                      $('#alert_placeholder').html('<div class="alert alert-success alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><span>'+message+'</span></div>')
+                                      }
+                                      bootstrap_alert.warning('Configuration Successfully Updated!');
                                   }
-                              });
-                              e.preventDefault();
-                              bootstrap_alert = function() {}
-                              bootstrap_alert.warning = function(message) {
-                              $('#alert_placeholder').html('<div class="alert alert-success alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><span>'+message+'</span></div>')
-                              }
-                              bootstrap_alert.warning('Configuration Successfully Updated!');
-                          }
-                          $('#puppetcontrolrepo').submit( processForm );
-                      })(jQuery);
+                                  $('#puppetcontrolrepo').submit( processForm );
+                              })(jQuery);
     </script>
     <script>
       (function($){
-                          function processForm( e ){
-                              $.ajax({
-                                  url: '/addpuppetmodule',
-                                  dataType: 'text',
-                                  type: 'post',
-                                  contentType: 'application/x-www-form-urlencoded',
-                                  data: $(this).serialize(),
-                                  success: function( data, textStatus, jQxhr ){
-                                      $('#response pre').html( data );
-                                  },
-                                  error: function( jqXhr, textStatus, errorThrown ){
-                                      console.log( errorThrown );
+                                  function processForm( e ){
+                                      $.ajax({
+                                          url: '/addpuppetmodule',
+                                          dataType: 'text',
+                                          type: 'post',
+                                          contentType: 'application/x-www-form-urlencoded',
+                                          data: $(this).serialize(),
+                                          success: function( data, textStatus, jQxhr ){
+                                              $('#response pre').html( data );
+                                          },
+                                          error: function( jqXhr, textStatus, errorThrown ){
+                                              console.log( errorThrown );
+                                          }
+                                      });
+                                      e.preventDefault();
+                                      bootstrap_alert = function() {}
+                                      bootstrap_alert.warning = function(message) {
+                                      $('#alert_placeholder').html('<div class="alert alert-success alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><span>'+message+'</span></div>')
+                                      }
+                                      bootstrap_alert.warning('Configuration Successfully Updated!');
                                   }
-                              });
-                              e.preventDefault();
-                              bootstrap_alert = function() {}
-                              bootstrap_alert.warning = function(message) {
-                              $('#alert_placeholder').html('<div class="alert alert-success alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><span>'+message+'</span></div>')
-                              }
-                              bootstrap_alert.warning('Configuration Successfully Updated!');
-                          }
-                          $('#addpuppetmodule').submit( processForm );
-                      })(jQuery);
+                                  $('#addpuppetmodule').submit( processForm );
+                              })(jQuery);
     </script>
     <!-- Optionally, you can add Slimscroll and FastClick plugins.
     Both of these plugins are recommended to enhance the user experience. Slimscroll
@@ -403,6 +516,6 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/locale/bootstrap-table-en-US.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
-  </body>
+  
 
-</html>
+</body></html>
